Fixed too big tabss inside tabs margin

--- a/res/css/wcml-setup.css
+++ b/res/css/wcml-setup.css
@@ -177,7 +177,6 @@ body {
     color: #ccc;
     width: 100%;
     display: -ms-inline-flexbox;
-    display: -webkit-inline-flex;
     display: inline-flex
 }
 .wcml-setup-steps li {
